# Mamut

./: LICENSE  README.md  pyproject.toml  readthedocs.yml  walkthrough.html
docs/source/: conf.py  index.rst  installation.rst  mamut.preprocessing.rst  mamut.rst  mamut.utils.rst
docs/source/notebooks/: walkthrough.ipynb
mamut/: evaluation.py  model_selection.py  wrapper.py
mamut/preprocessing/: handlers.py  preprocessing.py
mamut/utils/: utils.py
