[tool.poetry]
name = "mamut"
version = "0.1.2"
description = "Machine Automated Modelling and Utility Toolkit"
authors = ["Igor Kolodziej <igor.kolodziej@proton.me>", "Hubert Kowalski", "Julia Przybytniowska"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "1.5.2"
optuna = "^4.1.0"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
xgboost = "2.1.3"
numpy = "^2.0.0"
imbalanced-learn = "^0.13.0"
Jinja2 = "^3.0.2"
psutil = "^6.1.1"
llvmlite = "^0.43.0"
numba = "0.60.0"
shap = "^0.46.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = "^3.0.0"
nbsphinx = "^0.9.6"
nbconvert = "^7.16.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[tool.isort]
profile = "black"
